<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculadora IMC</string>

    <string name="title_form">Digite seus dados</string>
    <string name="title_result">Resultado do teste</string>

    <string name="label_nome">Nome</string>
    <string name="label_peso">Peso</string>
    <string name="label_altura">Altura</string>
    <string name="label_calcular">Calcular</string>

    <string name="hint_nome">Digite seu nome</string>
    <string name="hint_peso">Digite seu peso</string>
    <string name="hint_altura">Digite sua altura</string>

    <string name="desc_nome">Digite seu nome</string>
    <string name="desc_peso">Digite seu peso em quilos</string>
    <string name="desc_altura">Digite sua altura em centímetros</string>

    <string name="result_nome">Nome</string>
    <string name="result_tipo">Classificação</string>
    <string name="result_imc">Seu IMC</string>
    <string name="result_peso">Seu Peso</string>
    <string name="result_altura">Sua Altura</string>

    <string name="botao_voltar">Voltar</string>

</resources>
